# PX4_SIMULINK_IO_Framework

./: .gitignore  README.md
Firmware/ROMFS/px4fmu_common/init.d/: rc.mc_apps.original  rc.vtol_apps
Firmware/ROMFS/px4fmu_common/init.d-posix/: px4-rc.mavlink  rcS
Firmware/ROMFS/px4fmu_common/mixers/: vtol_tilt_wing.aux.mix
Firmware/boards/cubepilot/cubeorange/: default.cmake  default.cmake.original  default.px4board  default.px4board.original
Firmware/boards/px4/fmu-v2/: default.cmake  default.cmake.original
Firmware/boards/px4/fmu-v3/: default.cmake
Firmware/boards/px4/fmu-v5/: default.cmake  default.cmake.original
Firmware/boards/px4/sitl/: default.cmake
Firmware/msg/: CMakeLists.txt  SimGuidanceRequest.msg  actuator_outputs.msg  debug_array.msg  sim_guidance_request.msg  sim_guidance_status.msg  sim_guidance_trajectory.msg
Firmware/src/drivers/uavcan/: CMakeLists.txt  safety_state.cpp  safety_state.hpp  uavcan_main.cpp  uavcan_main.hpp  uavcan_params.c
Firmware/src/lib/pwm/: CMakeLists.txt  uavcan_sv_params.yaml
Firmware/src/logger/: logged_topics.cpp
Firmware/src/modules/commander/: Commander.cpp  Commander.hpp  ManualControl.cpp  ManualControl.hpp  state_machine_helper.cpp
Firmware/src/modules/logger/: logged_topics.cpp  logged_topics.h  params.c
Firmware/src/modules/mavlink/: mavlink_main.cpp  (+5 more)
Firmware/src/modules/sim_guidance/libs/solver_codegen/: CMakeLists.txt
Firmware/src/modules/sim_guidance/libs/solver_codegen/include/: coder_cs.h  cs.h  solver_codegen.h  solver_codegen_emxAPI.h  solver_codegen_emxutil.h  solver_codegen_types.h  tmwtypes.h
Firmware/src/modules/sim_guidance/libs/solver_codegen/src/: cs_ci_bundle.c  cs_ri_bundle.c  solver_codegen.c  solver_codegen_emxAPI.c  solver_codegen_emxutil.c  unpackCXStruct.c
(+47 files in other folders)
